src/test/ui/error-codes/E0093.stderr
error[E0093]: unrecognized intrinsic function: `foo`
  --> $DIR/E0093.rs:13:5
   |
LL |     fn foo();
   |     ^^^^^^^^^ unrecognized intrinsic

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0093"
